Agentforce/force-app/main/default/objects/Account/fields/DB_Global_Ultimate_Country_ISO_code__c.field-meta.xml
<CustomField>
    <fullName>DB_Global_Ultimate_Country_ISO_code__c</fullName>
    <label>D&amp;B: Global Ultimate Country ISO code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>