Agentforce/force-app/main/default/objects/Account/fields/DB_HeadQuarter_Account__c.field-meta.xml
<CustomField>
    <fullName>DB_HeadQuarter_Account__c</fullName>
    <label>D&amp;B: HeadQuarter Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>