Agentforce/force-app/main/default/objects/Account/fields/DB_HeadQuarter_D_U_N_S__c.field-meta.xml
<CustomField>
    <fullName>DB_HeadQuarter_D_U_N_S__c</fullName>
    <label>D&amp;B: HeadQuarter D-U-N-S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>