Agentforce/force-app/main/default/objects/Account/fields/DB_Hierarchy_level__c.field-meta.xml
<CustomField>
    <fullName>DB_Hierarchy_level__c</fullName>
    <label>D&amp;B: Hierarchy level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>