Agentforce/force-app/main/default/objects/Account/fields/DB_Int_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_Int_Phone_Number__c</fullName>
    <formula>&quot;+&quot; + Text(International_Dial_Code__c) + TEXT(DB_Phone_Number__c)</formula>
    <label>DB Int Phone Number</label>
    <type>Text</type>
</CustomField>