Agentforce/force-app/main/default/objects/Account/fields/DB_Is_Small_Business__c.field-meta.xml
<CustomField>
    <fullName>DB_Is_Small_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Small Business</label>
    <type>Checkbox</type>
</CustomField>