Agentforce/force-app/main/default/objects/Account/fields/DB_modification_datetime__c.field-meta.xml
<CustomField>
    <fullName>DB_modification_datetime__c</fullName>
    <label>D&amp;B: Modification Datetime</label>
    <type>DateTime</type>
</CustomField>