Agentforce/force-app/main/default/objects/Account/fields/DB_No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>DB_No_of_Employees__c</fullName>
    <label>No of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>