Agentforce/force-app/main/default/objects/Account/fields/DB_No_of_Employees_Bracket__c.field-meta.xml
<CustomField>
    <fullName>DB_No_of_Employees_Bracket__c</fullName>
    <label># Employees Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 to 149</fullName>
            </value>
            <value>
                <fullName>1000 to 4999</fullName>
            </value>
            <value>
                <fullName>150 to 199</fullName>
            </value>
            <value>
                <fullName>200 to 499</fullName>
            </value>
            <value>
                <fullName>50 to 99</fullName>
            </value>
            <value>
                <fullName>500 to 999</fullName>
            </value>
            <value>
                <fullName>Less than 50 employees</fullName>
            </value>
            <value>
                <fullName>More than 5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>