Agentforce/force-app/main/default/objects/Account/fields/DB_Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>DB_Number_of_Sites__c</fullName>
    <label>Number of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>