Agentforce/force-app/main/default/objects/Account/fields/DB_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>DB_Parent_Account__c</fullName>
    <label>Parent Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>