Agentforce/force-app/main/default/objects/Account/fields/DB_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_Phone_Number__c</fullName>
    <label>DB Phone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>