Agentforce/force-app/main/default/objects/Account/fields/DB_SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>DB_SIC_Description__c</fullName>
    <formula>SIC_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Description</label>
    <type>Text</type>
</CustomField>