Agentforce/force-app/main/default/objects/Account/fields/DB_Trading_As2__c.field-meta.xml
<CustomField>
    <fullName>DB_Trading_As2__c</fullName>
    <label>Trading As (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>