Agentforce/force-app/main/default/objects/Account/fields/Delinquency_Score__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Score__c</fullName>
    <description>Identifies the Accounts Delinquency Score through DnB</description>
    <label>Delinquency Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>