Agentforce/force-app/main/default/objects/Account/fields/Delinquency_Score_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Score_Date_Temp__c</fullName>
    <description>Identifies the Accounts Delinquency Score Date through DnB - requires formula to change date format</description>
    <label>Delinquency Score Date Temp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>