Agentforce/force-app/main/default/objects/Account/fields/DisplayAlertNoDUNS__c.field-meta.xml
<CustomField>
    <fullName>DisplayAlertNoDUNS__c</fullName>
    <label>DisplayAlertNoDUNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>