Agentforce/force-app/main/default/objects/Account/fields/DnB_Financial_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DnB_Financial_Risk_Indicator__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_riskSegm__c</formula>
    <inlineHelpText>D&amp;B Financial Risk Indicator where 1 indicates a minimal risk and 4 indicates a significant level of risk.</inlineHelpText>
    <label>D&amp;B Financial Risk Indicator</label>
    <type>Text</type>
</CustomField>