Agentforce/force-app/main/default/objects/Account/fields/DnB_Financial_Strength_Rating__c.field-meta.xml
<CustomField>
    <fullName>DnB_Financial_Strength_Rating__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_FinStrength__c</formula>
    <inlineHelpText>D&amp;B Financial Strength Rating (based on Tangible Net Worth and latest available Financial Accounts)</inlineHelpText>
    <label>D&amp;B Financial Strength Rating</label>
    <type>Text</type>
</CustomField>