Agentforce/force-app/main/default/objects/Account/fields/Domestic_Ultimate_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Account_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domestic Ultimate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Domestic Ultimate Account)</relationshipLabel>
    <relationshipName>DomesticUltimateAccount</relationshipName>
    <type>Lookup</type>
</CustomField>