Agentforce/force-app/main/default/objects/Account/fields/Domestic_Ultimate_Country__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Country__c</fullName>
    <label>Domestic Ultimate Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>