Agentforce/force-app/main/default/objects/Account/fields/DUNS_No__c.field-meta.xml
<CustomField>
    <fullName>DUNS_No__c</fullName>
    <label>DUNS No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>