Agentforce/force-app/main/default/objects/Account/fields/DUNS_Tmp__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Tmp__c</fullName>
    <label>DUNS Tmp</label>
    <length>15</length>
    <type>Text</type>
</CustomField>