Agentforce/force-app/main/default/objects/Account/fields/Earliest_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Contract_Start_Date__c</fullName>
    <label>Earliest Contract Start Date</label>
    <type>Date</type>
</CustomField>