Agentforce/force-app/main/default/objects/Account/fields/Energy_Priority__c.field-meta.xml
<CustomField>
    <fullName>Energy_Priority__c</fullName>
    <description>Identify the Priority for Energy Services</description>
    <inlineHelpText>Identify the Business Priority for Energy Services</inlineHelpText>
    <label>Energy Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>