Agentforce/force-app/main/default/objects/Account/fields/External_Id_Merged__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Merged__c</fullName>
    <label>External Id Merged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>