Agentforce/force-app/main/default/objects/Account/fields/Financial_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Financial_Risk_Level__c</fullName>
    <description>AD-842 to identify the Financial risk level against each Contract and identify the highest risk on the account</description>
    <label>Financial Risk Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>