Agentforce/force-app/main/default/objects/Account/fields/Financial_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_End__c</fullName>
    <label>Financial Year End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>