Agentforce/force-app/main/default/objects/Account/fields/Fortune_1000__c.field-meta.xml
<CustomField>
    <fullName>Fortune_1000__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Account is listed in the Fortune 1000</description>
    <label>Fortune 1000</label>
    <type>Checkbox</type>
</CustomField>