Agentforce/force-app/main/default/objects/Account/fields/Global_Ultimate_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Account_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Ultimate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Global Ultimate Account)</relationshipLabel>
    <relationshipName>GlobalUltimateAccount</relationshipName>
    <type>Lookup</type>
</CustomField>