Agentforce/force-app/main/default/objects/Account/fields/H_S_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>H_S_Risk_Level__c</fullName>
    <description>AD-839 to identify the &apos;H&amp;S Risk&apos; level against each Contract and identify the highest risk on the account</description>
    <label>H&amp;S Risk Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>