Agentforce/force-app/main/default/objects/Account/fields/Has_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachments__c</fullName>
    <label>Has Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>