Agentforce/force-app/main/default/objects/Account/fields/Head_Quarter_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_Account_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Quarter Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Head Quarter Account)</relationshipLabel>
    <relationshipName>HeadQuarterAccount</relationshipName>
    <type>Lookup</type>
</CustomField>