Agentforce/force-app/main/default/objects/Account/fields/High_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the account is considered High Risk through DnB</description>
    <label>High Risk Indicator</label>
    <type>Checkbox</type>
</CustomField>