Agentforce/force-app/main/default/objects/Account/fields/HR_Account__c.field-meta.xml
<CustomField>
    <fullName>HR_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Account</label>
    <type>Checkbox</type>
</CustomField>