Agentforce/force-app/main/default/objects/Account/fields/International_Dial_Code__c.field-meta.xml
<CustomField>
    <fullName>International_Dial_Code__c</fullName>
    <label>International Dial Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>