Agentforce/force-app/main/default/objects/Account/fields/IS_Agent__c.field-meta.xml
<CustomField>
    <fullName>IS_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Agent ?</label>
    <type>Checkbox</type>
</CustomField>