Agentforce/force-app/main/default/objects/Account/fields/Is_Delisted__c.field-meta.xml
<CustomField>
    <fullName>Is_Delisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Account is delisted</description>
    <label>Is Delisted</label>
    <type>Checkbox</type>
</CustomField>