Agentforce/force-app/main/default/objects/Account/fields/Is_Domestic_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Domestic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Domestic Account</label>
    <type>Checkbox</type>
</CustomField>