Agentforce/force-app/main/default/objects/Account/fields/Is_Exporter__c.field-meta.xml
<CustomField>
    <fullName>Is_Exporter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Account is an Exporter</description>
    <label>Is Exporter</label>
    <type>Checkbox</type>
</CustomField>