Agentforce/force-app/main/default/objects/Account/fields/Is_Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Global Account</label>
    <type>Checkbox</type>
</CustomField>