Agentforce/force-app/main/default/objects/Account/fields/Is_Global_Ultimate_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Ultimate_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Global Ultimate</label>
    <type>Checkbox</type>
</CustomField>