Agentforce/force-app/main/default/objects/Account/fields/Is_Importer__c.field-meta.xml
<CustomField>
    <fullName>Is_Importer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Account is an Importer</description>
    <label>Is Importer</label>
    <type>Checkbox</type>
</CustomField>