Agentforce/force-app/main/default/objects/Account/fields/Is_Marketable__c.field-meta.xml
<CustomField>
    <fullName>Is_Marketable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Account is marketable by mail</description>
    <label>Is Marketable</label>
    <type>Checkbox</type>
</CustomField>