Agentforce/force-app/main/default/objects/Account/fields/Is_NPS_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Is_NPS_Surveyor__c</fullName>
    <description>Ticked if the Current User is the Account&apos;s NPS Surveyor</description>
    <formula>$User.Id = NPS_Surveyor__c</formula>
    <label>Is NPS Surveyor</label>
    <type>Checkbox</type>
</CustomField>