Agentforce/force-app/main/default/objects/Account/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked when Account Owner is the current User</inlineHelpText>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>