Agentforce/force-app/main/default/objects/Account/fields/IsDUAndGU__c.field-meta.xml
<CustomField>
    <fullName>IsDUAndGU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDUAndGU</label>
    <type>Checkbox</type>
</CustomField>