Agentforce/force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-157 - checkbox to identify if the account is a Key Account</description>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>