Agentforce/force-app/main/default/objects/Account/fields/Key_Contact_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Inactive__c</fullName>
    <description>Identifies where Key Contact is not Active</description>
    <formula>Key_Contact__r.Inactive__c</formula>
    <label>Key Contact Inactive</label>
    <type>Checkbox</type>
</CustomField>