Agentforce/force-app/main/default/objects/Account/fields/Key_Target__c.field-meta.xml
<CustomField>
    <fullName>Key_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if the Account is a key target - mapped upon Lead conversion</description>
    <label>Key Target</label>
    <type>Checkbox</type>
</CustomField>