Agentforce/force-app/main/default/objects/Account/fields/Known_As__c.field-meta.xml
<CustomField>
    <fullName>Known_As__c</fullName>
    <description>AD-342 to label the Opportunity Name should start with the Account Name (Short Name) except where it does not exist, in which case use the Full Account Name.</description>
    <inlineHelpText>If this Account is known by a different name to its legal entity name then please enter this here. The value (if provided) is used in the automatic naming of all Opportunities and Contracts that relate to this Account.</inlineHelpText>
    <label>Known As</label>
    <length>122</length>
    <type>Text</type>
</CustomField>