Agentforce/force-app/main/default/objects/Account/fields/Last_Available_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Last_Available_Accounts__c</fullName>
    <label>Last Available Accounts</label>
    <type>Date</type>
</CustomField>