Agentforce/force-app/main/default/objects/Account/fields/Last_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contract_End_Date__c</fullName>
    <description>Last Contract End Date determined through DLRS</description>
    <label>Last Contract End Date</label>
    <type>Date</type>
</CustomField>