Agentforce/force-app/main/default/objects/Account/fields/Latest_Credit_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Credit_Score_Date__c</fullName>
    <label>Latest Credit Score Date</label>
    <type>Date</type>
</CustomField>