Agentforce/force-app/main/default/objects/Account/fields/Latest_NPS__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest NPS</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account on the NPS does not match the NPS Account</errorMessage>
        <filterItems>
            <field>NPS__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account_NPS</relationshipName>
    <type>Lookup</type>
</CustomField>