Agentforce/force-app/main/default/objects/Account/fields/Latest_NPS_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Date__c</fullName>
    <formula>DATEVALUE( Latest_NPS__r.Visit_Start__c)</formula>
    <label>Latest NPS Date</label>
    <type>Date</type>
</CustomField>