Agentforce/force-app/main/default/objects/Account/fields/Latest_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Score__c</fullName>
    <formula>Latest_NPS__r.Recommend_Us_Score__c</formula>
    <label>Latest NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>