Agentforce/force-app/main/default/objects/Account/fields/Latest_NPS_Survey_Category__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Survey_Category__c</fullName>
    <formula>TEXT(Latest_NPS__r.Survey_Category__c)</formula>
    <label>Latest NPS Survey Category</label>
    <type>Text</type>
</CustomField>