Agentforce/force-app/main/default/objects/Account/fields/Lead_Forensics_Matched__c.field-meta.xml
<CustomField>
    <fullName>Lead_Forensics_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Forensics Matched</label>
    <type>Checkbox</type>
</CustomField>