Agentforce/force-app/main/default/objects/Account/fields/Legacy_AS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_Account_ID__c</fullName>
    <label>Legacy AS Account ID</label>
    <type>TextArea</type>
</CustomField>