Agentforce/force-app/main/default/objects/Account/fields/Legacy_AS_ID_Merged__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_ID_Merged__c</fullName>
    <label>Legacy AS ID Merged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>