Agentforce/force-app/main/default/objects/Account/fields/Legacy_Merge__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Merge__c</fullName>
    <label>Legacy Merge</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>