Agentforce/force-app/main/default/objects/Account/fields/Legacy_OCS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Account_ID__c</fullName>
    <label>Legacy OCS Account ID</label>
    <type>TextArea</type>
</CustomField>