Agentforce/force-app/main/default/objects/Account/fields/Legacy_OCS_ID_Merged__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_ID_Merged__c</fullName>
    <label>Legacy OCS ID Merged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>