Agentforce/force-app/main/default/objects/Account/fields/LF__Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>LF__Visit_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Displays the count of Visits for this Account</description>
    <label>LF Visit Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>