Agentforce/force-app/main/default/objects/Account/fields/LID_LinkedIn_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>LID_LinkedIn_Company_Id__c</fullName>
    <label>LinkedIn Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>