Agentforce/force-app/main/default/objects/Account/fields/Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Managed_By__c</fullName>
    <label>Managed By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>