Agentforce/force-app/main/default/objects/Account/fields/Managing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select where Account is a Managing Agent or Consultant</inlineHelpText>
    <label>Managing Agent</label>
    <type>Checkbox</type>
</CustomField>