Agentforce/force-app/main/default/objects/Account/fields/Managing_Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Account is not recorded as a Managing Agent.</errorMessage>
        <filterItems>
            <field>$Source.Managing_Agent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>