Agentforce/force-app/main/default/objects/Account/fields/Match_Payer_Address_to_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Match_Payer_Address_to_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Payer Address to Billing Address</label>
    <type>Checkbox</type>
</CustomField>