Agentforce/force-app/main/default/objects/Account/fields/Merged_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Merged_Account_Names__c</fullName>
    <label>Merged Account Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>