Agentforce/force-app/main/default/objects/Account/fields/Merged_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Merged_Phone_Numbers__c</fullName>
    <label>Merged Phone Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>