Agentforce/force-app/main/default/objects/Account/fields/MNC_Account__c.field-meta.xml
<CustomField>
    <fullName>MNC_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-804 Checkbox to identify an MNC account</description>
    <label>MNC Account</label>
    <type>Checkbox</type>
</CustomField>