Agentforce/force-app/main/default/objects/Account/fields/Next_Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Next_Contract_Expiry__c</fullName>
    <label>Next Contract Expiry</label>
    <type>Date</type>
</CustomField>