Agentforce/force-app/main/default/objects/Account/fields/Next_NPS_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_NPS_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to surface the next NPS Visit which is to take place.</description>
    <label>Next NPS Visit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not match</errorMessage>
        <filterItems>
            <field>NPS__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>Accounts (Next NPS Visit)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>