Agentforce/force-app/main/default/objects/Account/fields/Next_NPS_Visit_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_NPS_Visit_Due__c</fullName>
    <label>Next NPS Visit Due</label>
    <type>Date</type>
</CustomField>