Agentforce/force-app/main/default/objects/Account/fields/Next_NPS_Visit_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_NPS_Visit_Scheduled__c</fullName>
    <formula>DATEVALUE(Next_NPS_Visit__r.Visit_Start__c)</formula>
    <label>Next NPS Visit Scheduled</label>
    <type>Date</type>
</CustomField>