Agentforce/force-app/main/default/objects/Account/fields/No_D_U_N_S_Available__c.field-meta.xml
<CustomField>
    <fullName>No_D_U_N_S_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No D-U-N-S Available</label>
    <type>Checkbox</type>
</CustomField>