Agentforce/force-app/main/default/objects/Account/fields/No_of_Closed_Lost_Withdrawn_Opps__c.field-meta.xml
<CustomField>
    <fullName>No_of_Closed_Lost_Withdrawn_Opps__c</fullName>
    <formula>Count_of_Closed_Withdrawn_Opps__c + Count_of_Closed_Lost_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Closed Lost/Withdrawn Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>