Agentforce/force-app/main/default/objects/Account/fields/No_of_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_Website_Visits__c</fullName>
    <description>Part of Lead Forensics Integration. Populated by DLRS from the Website Visit Object.</description>
    <label># Website Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>