Agentforce/force-app/main/default/objects/Account/fields/Nordic_AAA_Rating_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Nordic_AAA_Rating_Date_Temp__c</fullName>
    <description>Provides the Temp Nordic AAA Rating Date used for with a formula to change the format</description>
    <label>Nordic AAA Rating Date Temp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>