Agentforce/force-app/main/default/objects/Account/fields/Nordic_AAA_Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Nordic_AAA_Rating_Value__c</fullName>
    <description>Provides the Accounts Nordic AAA Rating Value from DnB</description>
    <label>Nordic AAA Rating Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>